--- a/package.json
+++ b/package.json
@@ -16,5 +16,12 @@
   "bugs": {
     "url": "https://github.com/beatrizmribeiro/All-The-News/issues"
   },
-  "homepage": "https://github.com/beatrizmribeiro/All-The-News#readme"
+  "homepage": "https://github.com/beatrizmribeiro/All-The-News#readme",
+  "dependencies": {
+    "axios": "^0.17.1",
+    "express": "^4.16.2",
+    "mongo": "^0.1.0",
+    "morgan": "^1.9.0",
+    "request": "^2.83.0"
+  }
 }
