--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "axios": "^0.17.1",
     "express": "^4.16.2",
     "mongo": "^0.1.0",
+    "mongoose": "^5.0.0-rc0",
     "morgan": "^1.9.0",
     "request": "^2.83.0"
   }
