--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/beatrizmribeiro/All-The-News#readme",
   "dependencies": {
     "axios": "^0.17.1",
+    "cheerio": "^1.0.0-rc.2",
     "express": "^4.16.2",
     "mongo": "^0.1.0",
     "mongoose": "^5.0.0-rc0",
